syntax = "proto3";

package user_stats;

import "google/protobuf/timestamp.proto";

message User {
    string email = 1;
    string name = 2;
}

message QueryRequest {
    // created_at, last_visited_at, last_watched_at, last_email_notification, last_push_notification, last_sms_notification
    map<string, TimeQuery> timestamps = 1;
    // recent_watched, viewed_but_not_started, started_but_not_finished, finished
    map<string, IdQuery> ids = 2;
}

message RawQueryRequest {
    string query = 1;
}

message TimeQuery {
    google.protobuf.Timestamp start = 1;
    google.protobuf.Timestamp end = 2;
}

message IdQuery {
    repeated uint32 ids = 1;
}
