syntax = "proto3";

package user_stats;

import "message.proto";

service UserStatsService {
    rpc query(QueryRequest) returns (stream User);
    rpc raw_query(RawQueryRequest) returns (stream User);
}
